fixed vert spacing of skills icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2515,4 +2515,7 @@ p>strong {
 .skills>img {
 	width: 60px;
 	margin-right: 30px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+
 }
